kube/ns-sa.yaml
##################################################################################################
# Namespace
##################################################################################################
apiVersion: v1
kind: Namespace
metadata:
  name: gogo-system
  labels:
    istio-injection: enabled
