kube/gogo-gateway.yaml
##################################################################################################
# gateway
##################################################################################################
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gogo-gateway
  namespace: gogo-system
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
##################################################################################################
# virtual service
##################################################################################################
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gogo
  namespace: gogo-system
spec:
  hosts:
    - "*"
  gateways:
    - gogo-gateway
  http:
    - match:
        - uri:
            prefix: /dir
      route:
        - destination:
            host: dir
            port:
              number: 9080
---
